--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.2.2",
     "@uploadcare/react-uploader": "^1.6.0",
+    "@xyflow/react": "^12.6.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.483.0",
@@ -27,7 +28,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
+    "react-resizable-panels": "^2.1.9",
     "tailwind-merge": "^3.0.2",
+    "uuid": "^11.1.0",
     "vaul": "^1.1.2",
     "zod": "^3.24.3",
     "zustand": "^5.0.3"
