--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.1.9",
     "@uploadcare/react-uploader": "^1.6.0",
     "@xyflow/react": "^12.6.0",
     "class-variance-authority": "^0.7.1",
