canvas sidebar, accordions, connection cards on sidebar, google drive listener, google drive template for slack and discord, db models for connections

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-tabs": "^1.1.9",
     "@uploadcare/react-uploader": "^1.6.0",
     "@xyflow/react": "^12.6.0",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
