--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.18.0",
     "@hookform/resolvers": "^5.0.1",
+    "@notionhq/client": "^2.3.0",
     "@prisma/client": "^6.6.0",
     "@radix-ui/react-accordion": "^1.2.8",
     "@radix-ui/react-dialog": "^1.1.11",
