--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^4.13.23",
     "@clerk/nextjs": "^6.18.0",
     "@hookform/resolvers": "^5.0.1",
     "@notionhq/client": "^2.3.0",
@@ -26,6 +27,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "googleapis": "^148.0.0",
     "lucide-react": "^0.483.0",
     "motion": "^12.5.0",
     "next": "15.2.3",
@@ -34,6 +36,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
     "react-resizable-panels": "^2.1.9",
+    "svix": "^1.64.1",
     "tailwind-merge": "^3.0.2",
     "uuid": "^11.1.0",
     "vaul": "^1.1.2",
