slack channels logic to be pushed, change in notifications based on node type, ui enhancements, db workflows to workflow editor

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
     "react-resizable-panels": "^2.1.9",
+    "sonner": "^2.0.3",
     "svix": "^1.64.1",
     "tailwind-merge": "^3.0.2",
     "uuid": "^11.1.0",
